--- a/src/main/asciidoc/srs/systemgrenze.adoc
+++ b/src/main/asciidoc/srs/systemgrenze.adoc
@@ -2,13 +2,22 @@
 
 === Kontextdiagramm
 
+////
 Das Kontextdiagramm zeigt das geplante Software-System in seiner Umgebung.
 Zur Umgebung gehören alle Nutzergruppen des Systems und Nachbarsysteme.
 Die Grafik kann auch informell gehalten sein.
 Überlegen Sie sich dann geeignete Symbole.
 Die Grafik kann beispielsweise mit Visio erstellt werden.
 Wenn nötig, erläutern Sie diese Grafik.
+////
+
+[[context_diagram]]
+image::models/Context_Diagram.png[Kontextdiagramm,500px,100%,pdfwidth=50%,title="Kontextdiagramm",align=left]
 
 === Top-Level-Architektur
 
-Dokumentieren Sie ihre Top-Level-Architektur mit Hilfe eines Komponentendiagramm.
+//Dokumentieren Sie ihre Top-Level-Architektur mit Hilfe eines Komponentendiagramm.
+
+[[top_level_architecture]]
+image::models/Top-level_architecture.png[Top-Level-Architektur,600px,100%,pdfwidth=50%,title="Top-Level-Architektur",align=left]
+
