--- a/src/main/asciidoc/srs/akzeptanztestfälle.adoc
+++ b/src/main/asciidoc/srs/akzeptanztestfälle.adoc
@@ -73,12 +73,98 @@ Zudem nimmt er den Gegenstand entgegen.
 |===
 |ID                       |
 |Anwendungsfall           |
+|Voraussetzungen         a|
+Es existiert mindestens ein Raum im System und ein Mitarbeiter, der Schuster-Aufgaben erledigen kann
+und freie Zeit bzw. noch keine Aufträge hat.
+|Ereignis                a|
+Ein Kunde kommt in den Laden und möchte seien Sohlen reparieren. +
+Ein angemeldeter Mitarbeiter trägt den Auftrag ins System ein, bestätigt aber nicht, dass er das Geld kassiert hat.
+|Erwartetes Ergebnis     a|
+- Das entgegenzunehmende Geld wird *nicht* in den Finanzen verbucht.
+- Der Auftrag wird nicht in das System hinzugefügt.
+- Der Mitarbeiter wird darauf hin gewiesen das Geld zu kassieren.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Es existiert mindestens ein Raum im System.
+|Ereignis                a|
+Ein Kunde kommt in den Laden und möchte seien Sohlen reparieren. +
+Ein angemeldeter Mitarbeiter trägt den Auftrag ins System ein, vergisst aber eine Dienstleistung auszuwählen.
+|Erwartetes Ergebnis     a|
+- Der Auftrag wird nicht in das System hinzugefügt.
+- Der Mitarbeiter wird auf das Annahmeformular zurück geführt und muss die Dienstleistung angeben,
+um den Auftrag abzusenden.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Es existiert mindestens ein Raum im System aber *kein* Mitarbeiter, der Schuster-Aufgaben erledigen kann.
+|Ereignis                a|
+Ein Kunde kommt in den Laden und möchte seien Sohlen reparieren. +
+Ein angemeldeter Mitarbeiter versucht den Auftrag ins System einzugeben.
+|Erwartetes Ergebnis     a|
+- Der Auftrag wird nicht in das System hinzugefügt.
+- Der Mitarbeiter wird darauf hingewiesen, das zur Zeit keine Schusterrei verfügbar ist.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Es existiert kein Raum im System.
+|Ereignis                a|
+Ein Kunde kommt in den Laden und möchte seien Sohlen reparieren. +
+Ein angemeldeter Mitarbeiter versucht den Auftrag ins System einzugeben.
+|Erwartetes Ergebnis     a|
+- Der Auftrag wird nicht in das System hinzugefügt.
+- Der Mitarbeiter wird darauf hingewiesen, das zur Zeit keine Reparaturen möglich sind.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
 |Voraussetzungen         a|Es existieren Räume im System. Der Filialleiter is angemeldet.
 |Ereignis                a|
 Der Filialleiter trägt einen neu hinzugekommenen Raum in die Raumverwaltung ein.
 |Erwartetes Ergebnis     a|
 - Neue Aufträge werden nun, wenn von der Zeit günstig, in diesen Raum eingeplant.
-- Vielleicht werden auch bestehende Aufträge in den neuen Raum verteilt, damit sie schneller fertig werden.
+- Vielleicht werden auch bestehende Aufträge in den neuen Raum verteilt, damit diese schneller fertig werden.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|Es existiert ein Raum _E-001_ im System. Der Filialleiter is angemeldet.
+|Ereignis                a|
+Der Filialleiter benennt einen Raum in der Raumverwaltung in _E-001W_ um.
+|Erwartetes Ergebnis     a|
+- Der Filialleiter wird auf die Raumverwaltung geleitet.
+- Der Raumname wurde geändert.
+- Der Zeitplan für den Raum wurde nicht verändert.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|Es existiert ein Raum _E-001_ im System. Der Filialleiter is angemeldet.
+|Ereignis                a|
+Der Filialleiter fügt einen Raum _E-001_ in die Raumverwaltung hinzu.
+|Erwartetes Ergebnis     a|
+- Der Filialleiter wird auf dauf das Formular zurück geleitet und über die Dopplung informiert.
+- Der Raum wurde nicht angelegt.
+- Der existierende Raum _E-001_ bleibt erhalten.
+- Der Zeitplan für den Raum wurde nicht verändert.
 |===
 
 [cols="1, 3"]
@@ -90,9 +176,9 @@ Die Jeans von Herrn Leiter liegt schon 3 Wochen über dem Fertigstellungstermin 
 |Ereignis                a|
 Herr Leiter kommt in den Laden und holt seinen Gegenstand ab.
 
-Ein angemeldete Angestellter geht auf die Auftragsseite und löst den Gegenstand aus.
+Eine angemeldete Angestellte geht auf die Auftragsseite und löst den Gegenstand aus.
 |Erwartetes Ergebnis     a|
-- Der Angestellte wird aufgefordert 1€ zu kassieren.
+- Die Angestellte wird aufgefordert `1€` zu kassieren.
 - Der eine Euro wird in die Finanz-Verwaltung als Einnahme eingetragen.
 - Die Jeans wird aus dem Lager-System entfernt.
 |===
@@ -162,4 +248,105 @@ Der Filialleiter trägt einen neuen Mitarbeiter in das System ein. Er möchte ih
 - Das alte Benutzerkonto _mueller_ bleibt unangetastet.
 - Der Filialleiter wird das Nutzer-Anlege-Formular wieder angezeigt, wo seine eingegebenen Daten noch drin stehen.
 - Der Filialleiter wird gebeten, sich einen anderen Nutzernamen auszudenken.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|Der Filialleiter is angemeldet.
+|Ereignis                a|
+Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, vergisst aber den Nachnamen auszufüllen.
+|Erwartetes Ergebnis     a|
+- Der Mitarbeiter wird nicht angelegt.
+- Der Filialleiter landet wieder bei dem Formular und muss den Nachnamen eintragen, um den Nutzer anlegen zu können.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Der Filialleiter is angemeldet.
+Und das System kennt einen Nutzer _mueller_ mit dem Vornamen _Herbert_ und Nachnamen _Müller_.
+|Ereignis                a|
+Der Filialleiter ändert den Nachnamen in _Meier_.
+|Erwartetes Ergebnis     a|
+- Der Filialleiter wird auf die Nutzerverwaltungsseite gebracht.
+- Der Nutzer ist überall im System umbenannt.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Ein Angestellter ist angemeldet und besitzt keine Admin-Rechte.
+|Ereignis                a|
+Der Angestellte gibt den URI für die Nutzerverwaltung in seinen Browser ein.
+|Erwartetes Ergebnis     a|
+- Der Angestellte bekommt eine Fehlermeldung, da er keine Zugriffsrechte hat.
+- Der Angestellte erhält keinen Zugriff auf die Nutzerverwaltung.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Eine Person ist nicht angemeldet.
+|Ereignis                a|
+Die Person gibt den URI für die Auftragsverwaltung in seinen Browser ein.
+|Erwartetes Ergebnis     a|
+- Die Person bekommt eine Fehlermeldung, da sie keine Zugriffsrechte hat.
+- Die Person erhält keinen Zugriff auf die Auftragsverwaltung.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Ein Mitarbeiter ist im System angemeldet.
+|Ereignis                a|
+Die Mitarbeiter geht auf die Materialverwaltungsseite und bestellt Schnur nach.
+|Erwartetes Ergebnis     a|
+- Die zusätzliche Schnur wird in das System hinzugefügt.
+- Die Kosten für die Schnur werden in den Finanzen vermerkt.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|
+Ein Mitarbeiter ist im System angemeldet.
+|Ereignis                a|
+Die Mitarbeiter geht auf die Materialverwaltungsseite und trägt die von ihm verbrauchte Schnur ein.
+|Erwartetes Ergebnis     a|
+- Die verbrauchte Schnur wird im System gelöscht.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|Der Filialleiter is angemeldet. Es existieren Bilanz-Posten im System.
+|Ereignis                a|
+Der Filialleiter navigiert zur Bilanzübersicht.
+|Erwartetes Ergebnis     a|
+- Der Filialleiter bekommt alle Bilanz-Posten angezeigt.
+- Die kalkulierte Summe der Posten ist korrekt.
+|===
+
+[cols="1, 3"]
+|===
+|ID                       |
+|Anwendungsfall           |
+|Voraussetzungen         a|Der Filialleiter is angemeldet. Es existieren *keine* Bilanz-Posten im System.
+|Ereignis                a|
+Der Filialleiter navigiert zur Bilanzübersicht.
+|Erwartetes Ergebnis     a|
+- Der Filialleiter bekommt keine Bilanz-Posten angezeigt.
+- Die kalkulierte Summe der Posten ist `0`.
 |===
