--- a/src/main/asciidoc/srs/funktionale_anforderungen.adoc
+++ b/src/main/asciidoc/srs/funktionale_anforderungen.adoc
@@ -75,4 +75,8 @@ eine karitative Organisation weitergeben werden.
 |[[KK0010]]<<KK0010>>
 |Arbeitsgeräte
 |Der Filialleiter kann auch noch Arbeitsgeräte über die Finanzen abrechnen.
+
+|[[KK0020]]<<KK0020>>
+|Passwort ändern
+|Die Nutzer des Systems können ihr Passwort ändern.
 |===
