--- a/src/main/asciidoc/srs/funktionale_anforderungen.adoc
+++ b/src/main/asciidoc/srs/funktionale_anforderungen.adoc
@@ -115,4 +115,28 @@ eine karitative Organisation weitergeben werden.
 |[[KK0020]]<<KK0020>>
 |Passwort ändern
 |Die Nutzer des Systems können ihr Passwort ändern.
+
+|[[KK0030]]<<KK0030>>
+|Nachbestellung
+|System Bestellt automatisch nach
+
+|[[KK0040]]<<KK0040>>
+|Bearbeitungsstand einsehen
+|Kunde kann Bearbeitungsstand einsehen mit ID
+
+|[[KK0050]]<<KK0050>>
+|Benachrichtigung des Kunden
+|Kunde wird bei Verspätung enachrichtigt
+
+|[[KK0060]]<<KK0060>>
+|BEarbeitungsdauer kalkulieren
+|Bearbeitungsdauer wird automatisch kalkuliert
+
+|[[KK0070]]<<KK0070>>
+|Zeiten aufzeichnen
+|Arbeitszeiten der Mitarbeiter werden aufgezeichnet
+
+|[[KK0080]]<<KK0080>>
+|effektivster Raum
+|System wählt automatisch den Raum mit der effektivsten Bearbeitung aus
 |===
