--- a/src/main/asciidoc/srs/akzeptanztestfälle.adoc
+++ b/src/main/asciidoc/srs/akzeptanztestfälle.adoc
@@ -11,11 +11,11 @@ Jeder Testfall soll mit einer ID versehen werde, um später zwischen den Dokumen
 [cols="1, 3"]
 |===
 |ID                       |[[AT0010]]<<AT0010>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0010>>
 |Voraussetzungen         a|Das System hat existierende Nutzer.
 |Ereignis                a|
 Ein unangemeldeter Angestellter geht zur Login-Maske und meldet sich mit den validen Nutzerdaten
-(name=mueller, passwort=123) an.
+(name=mueller, password=123) an.
 |Erwartetes Ergebnis     a|
 - Der Angestellte ist jetzt als _mueller_ angemeldet.
 - Der Angestellte wird auf die Annahmeschalter-Seite weiter geleitet.
@@ -25,7 +25,7 @@ Ein unangemeldeter Angestellter geht zur Login-Maske und meldet sich mit den val
 [cols="1, 3"]
 |===
 |ID                       |[[AT0011]]<<AT0011>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0010>>
 |Voraussetzungen         a|Das System hat existierende Nutzer.
 |Ereignis                a|
 Eine unangemeldete Person geht zur Login-Maske und meldet sich mit dem validen Nutzernamen
@@ -40,7 +40,7 @@ ohne ihm zu verraten, dass der Nutzername richtig war.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0012]]<<AT0012>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0010>>
 |Voraussetzungen         a|Ein Nutzer hat sich angemeldet.
 |Ereignis                a|
 Der angemeldete Nutzer klickt auf den Logout-Button.
@@ -53,7 +53,7 @@ Der angemeldete Nutzer klickt auf den Logout-Button.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0020]]<<AT0020>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0040>>
 |Voraussetzungen         a|
 Es existiert mindestens ein Raum im System und ein Mitarbeiter, der Schuster-Aufgaben erledigen kann
 und freie Zeit bzw. noch keine Aufträge hat.
@@ -72,7 +72,7 @@ Zudem nimmt er den Gegenstand entgegen.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0021]]<<AT0021>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0040>>
 |Voraussetzungen         a|
 Es existiert mindestens ein Raum im System und ein Mitarbeiter, der Schuster-Aufgaben erledigen kann
 und freie Zeit bzw. noch keine Aufträge hat.
@@ -82,20 +82,20 @@ Ein angemeldeter Mitarbeiter trägt den Auftrag ins System ein, bestätigt aber 
 |Erwartetes Ergebnis     a|
 - Das entgegenzunehmende Geld wird *nicht* in den Finanzen verbucht.
 - Der Auftrag wird nicht in das System hinzugefügt.
-- Der Mitarbeiter wird darauf hin gewiesen das Geld zu kassieren.
+- Der Mitarbeiter wird darauf hin gewiesen, das Geld zu kassieren.
 |===
 
 [cols="1, 3"]
 |===
 |ID                       |[[AT0022]]<<AT0022>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0040>>
 |Voraussetzungen         a|
 Es existiert mindestens ein Raum im System.
 |Ereignis                a|
 Ein Kunde kommt in den Laden und möchte seien Sohlen reparieren. +
 Ein angemeldeter Mitarbeiter trägt den Auftrag ins System ein, vergisst aber eine Dienstleistung auszuwählen.
 |Erwartetes Ergebnis     a|
-- Der Auftrag wird nicht in das System hinzugefügt.
+- Der Auftrag wird *nicht* in das System hinzugefügt.
 - Der Mitarbeiter wird auf das Annahmeformular zurück geführt und muss die Dienstleistung angeben,
 um den Auftrag abzusenden.
 |===
@@ -103,7 +103,7 @@ um den Auftrag abzusenden.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0023]]<<AT0023>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0040>>
 |Voraussetzungen         a|
 Es existiert mindestens ein Raum im System aber *kein* Mitarbeiter, der Schuster-Aufgaben erledigen kann.
 |Ereignis                a|
@@ -111,13 +111,13 @@ Ein Kunde kommt in den Laden und möchte seien Sohlen reparieren. +
 Ein angemeldeter Mitarbeiter versucht den Auftrag ins System einzugeben.
 |Erwartetes Ergebnis     a|
 - Der Auftrag wird nicht in das System hinzugefügt.
-- Der Mitarbeiter wird darauf hingewiesen, das zur Zeit keine Schusterrei verfügbar ist.
+- Der Mitarbeiter wird darauf hingewiesen, dass zur Zeit keine Schusterrei verfügbar ist.
 |===
 
 [cols="1, 3"]
 |===
 |ID                       |[[AT0024]]<<AT0024>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0040>>
 |Voraussetzungen         a|
 Es existiert kein Raum im System.
 |Ereignis                a|
@@ -131,7 +131,7 @@ Ein angemeldeter Mitarbeiter versucht den Auftrag ins System einzugeben.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0030]]<<AT0030>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0072>>
 |Voraussetzungen         a|Es existieren Räume im System. Der Filialleiter is angemeldet.
 |Ereignis                a|
 Der Filialleiter trägt einen neu hinzugekommenen Raum in die Raumverwaltung ein.
@@ -143,7 +143,7 @@ Der Filialleiter trägt einen neu hinzugekommenen Raum in die Raumverwaltung ein
 [cols="1, 3"]
 |===
 |ID                       |[[AT0031]]<<AT0031>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0072>>, <<UC0071>>
 |Voraussetzungen         a|Es existiert ein Raum _E-001_ im System. Der Filialleiter is angemeldet.
 |Ereignis                a|
 Der Filialleiter benennt einen Raum in der Raumverwaltung in _E-001W_ um.
@@ -156,12 +156,12 @@ Der Filialleiter benennt einen Raum in der Raumverwaltung in _E-001W_ um.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0032]]<<AT0032>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0072>>
 |Voraussetzungen         a|Es existiert ein Raum _E-001_ im System. Der Filialleiter is angemeldet.
 |Ereignis                a|
 Der Filialleiter fügt einen Raum _E-001_ in die Raumverwaltung hinzu.
 |Erwartetes Ergebnis     a|
-- Der Filialleiter wird auf dauf das Formular zurück geleitet und über die Dopplung informiert.
+- Der Filialleiter wird auf das Formular zurück geleitet und über die Dopplung informiert.
 - Der Raum wurde nicht angelegt.
 - Der existierende Raum _E-001_ bleibt erhalten.
 - Der Zeitplan für den Raum wurde nicht verändert.
@@ -170,7 +170,7 @@ Der Filialleiter fügt einen Raum _E-001_ in die Raumverwaltung hinzu.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0040]]<<AT0040>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0042>>
 |Voraussetzungen         a|
 Die Jeans von Herrn Leiter liegt schon 3 Wochen über dem Fertigstellungstermin im Lager.
 |Ereignis                a|
@@ -186,7 +186,7 @@ Eine angemeldete Angestellte geht auf die Auftragsseite und löst den Gegenstand
 [cols="1, 3"]
 |===
 |ID                       |[[AT0041]]<<AT0041>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0043>>
 |Voraussetzungen         a|
 Herr Leiter hat seine Jeans abgegeben und sie sollten vor 3 Tagen fertig gewesen sein.
 |Ereignis                a|
@@ -200,13 +200,13 @@ Die Jeans sind jetzt erst fertig geworden.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0042]]<<AT0042>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0043>>
 |Voraussetzungen         a|
 Herr Leiter hat seine Jeans abgegeben und sie sollten vor 20 Tagen fertig gewesen sein.
 |Ereignis                a|
 Die Jeans sind jetzt erst fertig geworden.
 |Erwartetes Ergebnis     a|
-- Herr Leiter bekommt den vollen Reparatur-Preis zurück aber nicht mehr!
+- Herr Leiter bekommt den vollen Reparatur-Preis zurück, aber nicht mehr!
 - Diese Ausgaben werden in den Finanzen vermerkt.
 - Die Jeans wird aus dem Lager-System entfernt.
 |===
@@ -214,7 +214,7 @@ Die Jeans sind jetzt erst fertig geworden.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0043]]<<AT0043>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0050>>
 |Voraussetzungen         a|
 Herr Leiter hat seine Jeans schon vor langer Zeit zur Reparatur abgegeben.
 |Ereignis                a|
@@ -227,10 +227,10 @@ Die Jeans ist schon seit einer Woche und drei Monaten nicht abgeholt worden.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0050]]<<AT0050>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0020>>
 |Voraussetzungen         a|Der Filialleiter is angemeldet.
 |Ereignis                a|
-Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, der Schustern kann.
+Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, der schustern kann.
 |Erwartetes Ergebnis     a|
 - Der Mitarbeiter kann sich jetzt in das System einloggen.
 - Neue Schufterei-Aufträge werden auch diesem Mitarbeiter zugeordnet.
@@ -240,7 +240,7 @@ Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, der Schustern
 [cols="1, 3"]
 |===
 |ID                       |[[AT0051]]<<AT0051>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0020>>
 |Voraussetzungen         a|Der Filialleiter is angemeldet. Und das System kennt einen Nutzer _mueller_.
 |Ereignis                a|
 Der Filialleiter trägt einen neuen Mitarbeiter in das System ein. Er möchte ihn auch _mueller_ nennen.
@@ -253,7 +253,7 @@ Der Filialleiter trägt einen neuen Mitarbeiter in das System ein. Er möchte ih
 [cols="1, 3"]
 |===
 |ID                       |[[AT0052]]<<AT0052>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0020>>
 |Voraussetzungen         a|Der Filialleiter is angemeldet.
 |Ereignis                a|
 Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, vergisst aber den Nachnamen auszufüllen.
@@ -265,7 +265,7 @@ Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, vergisst aber
 [cols="1, 3"]
 |===
 |ID                       |[[AT0053]]<<AT0053>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0020>>
 |Voraussetzungen         a|
 Der Filialleiter is angemeldet.
 Und das System kennt einen Nutzer _mueller_ mit dem Vornamen _Herbert_ und Nachnamen _Müller_.
@@ -274,12 +274,13 @@ Der Filialleiter ändert den Nachnamen in _Meier_.
 |Erwartetes Ergebnis     a|
 - Der Filialleiter wird auf die Nutzerverwaltungsseite gebracht.
 - Der Nutzer ist überall im System umbenannt.
+- Er kann sich dennoch wie gewohnt anmelden.
 |===
 
 [cols="1, 3"]
 |===
 |ID                       |[[AT0060]]<<AT0060>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0010>>
 |Voraussetzungen         a|
 Ein Angestellter ist angemeldet und besitzt keine Admin-Rechte.
 |Ereignis                a|
@@ -292,7 +293,7 @@ Der Angestellte gibt den URI für die Nutzerverwaltung in seinen Browser ein.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0061]]<<AT0061>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0010>>
 |Voraussetzungen         a|
 Eine Person ist nicht angemeldet.
 |Ereignis                a|
@@ -305,7 +306,7 @@ Die Person gibt den URI für die Auftragsverwaltung in seinen Browser ein.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0070]]<<AT0070>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0060>>
 |Voraussetzungen         a|
 Ein Mitarbeiter ist im System angemeldet.
 |Ereignis                a|
@@ -318,7 +319,7 @@ Die Mitarbeiter geht auf die Materialverwaltungsseite und bestellt Schnur nach.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0071]]<<AT0071>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0060>>
 |Voraussetzungen         a|
 Ein Mitarbeiter ist im System angemeldet.
 |Ereignis                a|
@@ -330,7 +331,7 @@ Die Mitarbeiter geht auf die Materialverwaltungsseite und trägt die von ihm ver
 [cols="1, 3"]
 |===
 |ID                       |[[AT0080]]<<AT0080>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0030>>
 |Voraussetzungen         a|Der Filialleiter is angemeldet. Es existieren Bilanz-Posten im System.
 |Ereignis                a|
 Der Filialleiter navigiert zur Bilanzübersicht.
@@ -342,7 +343,7 @@ Der Filialleiter navigiert zur Bilanzübersicht.
 [cols="1, 3"]
 |===
 |ID                       |[[AT0081]]<<AT0081>>
-|Anwendungsfall           |
+|Anwendungsfall           |<<UC0030>>
 |Voraussetzungen         a|Der Filialleiter is angemeldet. Es existieren *keine* Bilanz-Posten im System.
 |Ereignis                a|
 Der Filialleiter navigiert zur Bilanzübersicht.
