--- a/src/main/asciidoc/srs/anwendungsfälle.adoc
+++ b/src/main/asciidoc/srs/anwendungsfälle.adoc
@@ -2,11 +2,13 @@
 
 === Akteure
 
+////
 Akteure sind die Benutzer des Software-Systems oder Nachbarsysteme, welche darauf zugreifen.
 Dokumentieren Sie die Akteure in einer Tabelle.
 Diese Tabelle gibt einen Überblick über die Akteure und beschreibt sie kurz.
 Die Tabelle hat also mindestens zwei Spalten (Akteur Name und Kommentar).
 Weitere relevante Spalten können bei Bedarf ergänzt werden.
+////
 
 // See http://asciidoctor.org/docs/user-manual/#tables
 [options="header"]
@@ -17,16 +19,16 @@ Weitere relevante Spalten können bei Bedarf ergänzt werden.
 |Beschreibung
 
 |User
-|Rerpräasentiert jede Person die mit dem System interagiert unabhängig davon ob sie angemeldet ist oder nicht.
+|Repräsentiert jede Person, die mit dem System interagiert, unabhängig davon, ob sie angemeldet ist oder nicht.
 
 |Signed-out User
-|Repräsentiert jede Person die zwar einen Account besitzt aber (noch) nicht angemeldet ist.
+|Repräsentiert jede Person die zwar einen Account besitzt, aber (noch) nicht angemeldet ist.
 
 |Staff
-|Repräsentiert jeden angemeldeten Nutzer der die Rolle "Staff" hat. Besitz nur eingeschränkte Zugriffsrechte.
+|Repräsentiert jeden angemeldeten Nutzer, der die Rolle "Staff" hat. Besitz nur eingeschränkte Zugriffsrechte.
 
 |Admin
-|Repräsentiert jeden angemeldeten Nutzer der die Rolle "Admin" hat. Hat uneingeschränkten Zugriff
+|Repräsentiert jeden angemeldeten Nutzer, der die Rolle "Admin" hat. Hat uneingeschränkten Zugriff
 |===
 
 === Überblick Anwendungsfalldiagramm
@@ -59,7 +61,7 @@ Dieser Prozess muss durch Abmeldung rückgängig gemacht werden können.
 |Auslöser                    |
 _Login_: Der Benutzer möchte durch Einloggen auf "versteckte" Funktionen zugreifen.
 
-_Logout_: Der Benutzer möchte den Shop verlassen.
+_Logout_: Der Benutzer möchte das System verlassen.
 |Vorbedingung  a|
 _Login_: Der Benutzer ist noch nicht authentifiziert.
 
@@ -77,7 +79,7 @@ _Logout_:
 2. Der Benutzer ist nicht authentifiziert und wird auf dem Startbildschirm angezeigt.
 
 |Erweiterungen                 |-
-|Funktionale Anforderungen    |<<F0010>>
+|Funktionale Anforderungen    |<<MK0010>>
 |===
 
 [cols="1h, 3"]
@@ -85,23 +87,23 @@ _Logout_:
 |===
 |ID                         |**<<UC0020>>**
 |Name                       |Mitarbeiter wird erstellt
-|Beschreibung                |Ein Admin sollte in der Lage sein einen Account für einen Mitarbeiter zu erstellen.
-|Akteure                     |Admin
-|Auslöser                    |Der Administrator möchte ein Konto für einen Benutzer erstellen, indem er auf "Registrieren" drückt.
-|Vorbedingung           a|Mitarbeit ist noch nicht eingeloggt (authentifiziert)
-|Wesentliche Schritte           a|
+|Beschreibung               |Ein Admin sollte in der Lage sein, einen Account für einen Mitarbeiter zu erstellen.
+|Akteure                    |Admin
+|Auslöser                   |Der Administrator möchte ein Konto für einen Benutzer erstellen, indem er auf "Registrieren" drückt.
+|Vorbedingung              a|Mitarbeiter ist noch nicht eingeloggt (authentifiziert)
+|Wesentliche Schritte      a|
 1. Der Admin drückt "Registrieren".
 2. Er gibt den gewünschten Benutzernamen, das Passwort und die Adresse ein.
 3. System prüft die Eindeutigkeit des Benutzernamens
 . Wenn einzigartig: Es wird ein Konto mit den angegebenen Daten angelegt.
 . Andernfalls: Es wird eine Fehlermeldung angezeigt.|Erweiterungen                 |-
-|Funktionale Anforderungen    |<<F0020>>, <<F0021>>
+|Funktionale Anforderungen    |<<MK0020>>
 |===
 
-[[UC0100]]
+[[UC0030]]
 [cols="1h, 3"]
 |===
-|ID                         |**<<UC0100>>**
+|ID                         |**<<UC0030>>**
 |Name                       |Bilanzen ansehen
 |Beschreibung                |Ein Admin sollte in der Lage sein, in einer gesonderten Nutzerumgebung die Bilanzen einzusehen.
 |Akteure                     |Admin
@@ -111,16 +113,16 @@ _Logout_:
 1. Admin wählt "Bilanzen anzeigen" in der Bilanzübersicht aus
 2. Admin bekommt die Bilanzen angezeigt
 |Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0100>>, <<F0110>>, <<F0111>>, <<F0112>>
+|Funktionale Anforderungen    | <<MK0080>>
 |===
 
 [[sequence_diagram_finance]]
 image::models/Finance.png[Sequenzdiagramm: Bilanzübersicht abrufen,100%,100%,pdfwidth=100%,title="Sequenzdiagramm: Bilanzübersicht abrufen",align=center]
 
-[[UC0110]]
+[[UC0031]]
 [cols="1h, 3"]
 |===
-|ID                         |**<<UC0110>>**
+|ID                         |**<<UC0031>>**
 |Name                       |Gewinn abführen
 |Beschreibung                |Ein Admin sollte in der Lage sein, in einer gesonderten Nutzerumgebung den Gewinn einzusehen und auszuzahlen.
 |Akteure                     |Admin
@@ -130,35 +132,35 @@ image::models/Finance.png[Sequenzdiagramm: Bilanzübersicht abrufen,100%,100%,pd
 1. Admin wählt "Gewinn anzeigen" in der Bilanzübersicht aus
 2. Admin bekommt den Gewinn angezeigt und kann ihn abführen
 |Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0120>>
+|Funktionale Anforderungen    | <<MK0080>>
 |===
 
 [cols="1h,3"]
-[[UC0120]]
+[[UC0040]]
 |===
-|ID                         |**<<UC0120>>**
-|Name                       |Auftrag erstellen
+|ID                          |**<<UC0040>>**
+|Name                        |Auftrag erstellen
 |Beschreibung                |Ein Kunde gibt bei einem Mitarbeiter einen Auftrag ab und dieser soll ihn dem System überstellen.
 |Akteure                     |Mitarbeiter
 |Auslöser                    |Mitarbeiter gibt Auftrag in das Sytsem ein.
-|Vorbedingung           a|Mitarbeiter ist eingeloggt und hat Zugriff auf die Komponente zur Auftragsverwaltung.
-|Wesentliche Schritte           a|
+|Vorbedingung               a|Mitarbeiter ist eingeloggt und hat Zugriff auf die Komponente zur Auftragsverwaltung.
+|Wesentliche Schritte       a|
 1. Mitarbeiter loggt sich ein
 2. Mitarbeiter gibt Daten in das System ein
 3. System verarbeitet Auftrag und gibt Ticket für den Kunden aus
 |Erweiterungen                a|
 - Nur Angemeldete Mitarbeiter dürfen Aufträge erstellem und Stornieren
 - Jeder Mitarbeiter kann nur seine eigenen Aufträge stornieren
-|Funktionale Anforderungen    | <<F0121>>
+|Funktionale Anforderungen    | <<MK0030>>, <<MK0170>>
 |===
 
 [[sequence_diagram_hand_in]]
 image::models/Hand_In.png[Sequenzdiagramm: Auftrag erstellen,100%,100%,pdfwidth=100%,title="Sequenzdiagramm: Auftrag erstellen",align=center]
 
 [cols="1h,3"]
-[[UC0121]]
+[[UC0041]]
 |===
-|ID                         |**<<UC0121>>**
+|ID                         |**<<UC0041>>**
 |Name                       |Ware abholen
 |Beschreibung                |Ein Mitarbeiter soll einem Kunden seine fertige Ware aushändigen.
 |Akteure                     |Mitarbeiter
@@ -169,16 +171,16 @@ image::models/Hand_In.png[Sequenzdiagramm: Auftrag erstellen,100%,100%,pdfwidth=
 2. Bei Abholung wird auf Verspätung der Abholung geprüft
 3. Die nötigen Schritte werden eingeleitet
 |Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0121>>
+|Funktionale Anforderungen    | <<MK0050>>, <<MK0040>>
 |===
 
 [[sequence_diagram_pick_up]]
 image::models/Hand_In.png[Sequenzdiagramm: Ware abholen,100%,100%,pdfwidth=100%,title="Sequenzdiagramm: Ware abholen",align=center]
 
 [cols="1h,3"]
-[[UC0200]]
+[[UC0042]]
 |===
-|ID                         |**<<UC0200>>**
+|ID                         |**<<UC0042>>**
 |Name                       |Ware wird zu spät abgeholt
 |Beschreibung                |Ein Mitarbeiter soll einem Kunden seine fertige Ware aushändigen.
 |Akteure                     |Mitarbeiter
@@ -190,13 +192,31 @@ image::models/Hand_In.png[Sequenzdiagramm: Ware abholen,100%,100%,pdfwidth=100%,
 3. Gebühren werden auf den Preis aufegschlagen
 4. Mitarbeiter kassiert die Gebühr
 |Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0200>>, <<F0201>>
+|Funktionale Anforderungen    | <<MK0050>>, <<MK0040>>
 |===
 
 [cols="1h,3"]
-[[UC0210]]
+[[UC0043]]
 |===
-|ID                         |**<<UC0210>>**
+|ID                         |**<<UC0043>>**
+|Name                       |Ware wird zu spät fertig
+|Beschreibung                |Ein Mitarbeiter soll einem Kunden seine fertige Ware aushändigen.
+|Akteure                     |Mitarbeiter
+|Auslöser                    |Mitarbeiter bestätigt Abholung der Ware im System
+|Vorbedingung           a|Ware liegt fertig bearbeitet, aber zu spät, im Lager
+|Wesentliche Schritte           a|
+1. Bei Abholung wird auf Verspätung der Bearbeitung geprüft
+2. Bei Abholung wird auf Verspätung der Abholung geprüft
+3. Preis wird verringert
+4. Mitarbeiter tätigt Ausgleichszahlung
+|Erweiterungen                 |-
+|Funktionale Anforderungen    | <<MK0060>>
+|===
+
+[cols="1h,3"]
+[[UC0050]]
+|===
+|ID                         |**<<UC0050>>**
 |Name                       |Karitative Abgabe
 |Beschreibung                |Nach Ablauf der Abholungsfrist soll die betroffene Ware karitativ abgegeben werden
 |Akteure                     |-
@@ -207,16 +227,16 @@ Ware wurde nicht fristgerecht abgeholt
 1. Ware wird automatisch zur Abgabe markiert
 2. Karitative Organisation holt die bis dato markierte Ware ab
 |Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0210>>
+|Funktionale Anforderungen    | <<MK0090>>
 |===
 
 [[sequence_diagram_charity]]
 image::models/Charity.png[Sequenzdiagramm: Karitative Abgabe,100%,100%,pdfwidth=100%,title="Sequenzdiagramm: Karitative Abgabe",align=center]
 
 [cols="1h,3"]
-[[UC0220]]
+[[UC0060]]
 |===
-|ID                         |**<<UC0220>>**
+|ID                         |**<<UC0060>>**
 |Name                       |Materialien nachbestellen
 |Beschreibung                |Fehlende Maerialien sollen automatisch nachbestellt werden
 |Akteure                     |-
@@ -230,13 +250,70 @@ image::models/Charity.png[Sequenzdiagramm: Karitative Abgabe,100%,100%,pdfwidth=
 3. Bestellliste wird zusammengetragen
 4. Material wird bestellt
 |Erweiterungen                 |
-|Funktionale Anforderungen    | <<F0101>>, <<F0220>>, <<F0230>>, <<F0240>>, <<F0241>>, <<F0242>>, <<F0243>>
+|Funktionale Anforderungen    | <<MK0110>>
 |===
 
 [cols="1h,3"]
-[[UC0300]]
+[[UC0070]]
 |===
-|ID                         |**<<UC0300>>**
+|ID                         |**<<UC0070>>**
+|Name                       |Raum buchen
+|Beschreibung                |Das System soll automatisch für Bestellungen freie, passende Räume buchen
+|Akteure                     |Mitarbeiter
+|Auslöser                    |Mitarbeiter übergibt dem System einen neuen Auftrag, welcher bearbeitet werden soll
+|Vorbedingung           a|Der Mitarbeiter ist angemeldet.
+|Wesentliche Schritte           a|
+1. Alle Ressourcen sind vorhanden und vollständig
+2. Im Terminplan wird ein freier Slot gesucht
+3. Slot und Ressourcen werden für die Bestellung gebucht
+|Erweiterungen                 |-
+|Funktionale Anforderungen    | <<MK0160>>, <<MK0030>>
+|===
+
+[cols="1h,3"]
+[[UC0071]]
+|===
+|ID                         |**<<UC0071>>**
+|Name                       |Raum löschen
+|Beschreibung                |Raum soll aus Datenbank gelöscht werden
+|Akteure                     |Admin
+|Auslöser                    |Admin löst Löschung des Raumes aus der Datenbank aus
+|Vorbedingung           a|Raum befindet sich in der Datenbank
+|Wesentliche Schritte           a|
+1. Admin wählt die Löschung des Raumes aus
+2. Raum wird gelöscht
+3. Raum kann neu erstellt werden
+4. Raum kann mit Ressourcen verknüpft werden
+|Erweiterungen                 |-
+|Funktionale Anforderungen    |
+|===
+
+[cols="1h,3"]
+[[UC0072]]
+|===
+|ID                         |**<<UC0072>>**
+|Name                       |Raum hinzufügen
+|Beschreibung                |Raum soll in das System hinzugefügt werden
+|Akteure                     |Admin
+|Auslöser                    |Admin löst Hinzufügen eines Raums in die Datenbank aus
+|Vorbedingung           a|Raum mit dem selben Namen befindet sich *nicht* in der Datenbank
+|Wesentliche Schritte           a|
+1. Admin wählt die Hinzufügung eines Raumes aus
+2. Admin trägt Daten des Raumes ein
+3. Raum wird erstellt
+|Erweiterungen                 |Aufträge können umverteilt werden.
+|Funktionale Anforderungen    | <<KK0080>>
+|===
+
+[[sequence_diagram_add_room]]
+image::models/Add_Room.png[Sequenzdiagramm: Hinzufügen eines Raumes mit Umsortierung eines Zeitslots,100%,100%,pdfwidth=100%,title="Sequenzdiagramm: Hinzufügen eines Raumes mit Umsortierung eines Zeitslots",align=center]
+
+==== Anwendungsfallbeschreibungen zu Kann-Kriterien
+
+[cols="1h,3"]
+[[UC1010]]
+|===
+|ID                         |**<<UC1010>>**
 |Name                       |Arbeitsgeräte nachbestellen
 |Beschreibung                |Fehlende Arbeitsgeräte sollen automatisch nachbestellt werden
 |Akteure                     |-
@@ -250,43 +327,5 @@ image::models/Charity.png[Sequenzdiagramm: Karitative Abgabe,100%,100%,pdfwidth=
 3. Bestellliste wird zusammengetragen
 4. Arbeitsgerät wird bestellt
 |Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0300>>
+|Funktionale Anforderungen    | <<KK0010>>
 |===
-
-[cols="1h,3"]
-[[UC0310]]
-|===
-|ID                         |**<<UC0310>>**
-|Name                       |Raum buchen
-|Beschreibung                |Das System soll automatisch für Bestellungen freie, passende Räume buchen
-|Akteure                     |Mitarbeiter
-|Auslöser                    |Mitarbeiter übergibt dem System einen neuen Auftrag, welcher bearbeitet werden soll
-|Vorbedingung           a|User is authenticated and has role "Boss"
-|Wesentliche Schritte           a|
-1. Alle Ressourcen sind vorhanden und vollständig
-2. Im Timetable wird ein freier Slot gesucht
-3. Slot und Ressourcen werden für die Bestellung gebucht
-|Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0310>>
-|===
-
-[cols="1h,3"]
-[[UC0320]]
-|===
-|ID                         |**<<UC0320>>**
-|Name                       |Raum löschen
-|Beschreibung                |Raum soll wegen aus Datenbank gelöscht werden
-|Akteure                     |Admin
-|Auslöser                    |Admin löst Löschung des Raumes aus der Datenbank aus
-|Vorbedingung           a|Raum befindet sich in der Datenbank
-|Wesentliche Schritte           a|
-1. Admin wählt die Löschung des Raumes aus
-2. Raum wird gelöscht
-3. Raum kann neu erstellt werden
-4. Raum kann mit Ressourcen verknüpft werden
-|Erweiterungen                 |-
-|Funktionale Anforderungen    | <<F0100>>, <<F0320>>
-|===
-
-[[sequence_diagram_add_room]]
-image::models/Add_Room.png[Sequenzdiagramm: Hinzufügen eines Raumes mit Umsortierung eines Zeitslots,100%,100%,pdfwidth=100%,title="Sequenzdiagramm: Hinzufügen eines Raumes mit Umsortierung eines Zeitslots",align=center]
