--- a/src/main/asciidoc/srs/interessensgruppen.adoc
+++ b/src/main/asciidoc/srs/interessensgruppen.adoc
@@ -18,19 +18,19 @@ Die Hauptziele der einzelnen Akteure werden ebenfalls beschrieben
 |Primärer Klient dieses Projekts
 a|
 - Gewinnmaximierung
-- Automatisierung/Optimierung des Bestellprozesses und der Lager/Mitarbeiter/Finanzverwaltung
+- Automatisierung/Optimierung des Bestellprozesses und der Lager-/Mitarbeiter-/Finanzverwaltung
 - Verfolgung/Überwachung der Einnahmen/Ausgaben
 
 |Mitarbeiter
 |4
-|Hauptsächliche Nutzer der Anwendung, sind für das Tagesgeschäft verantwortlich.
+|Hauptsächliche Nutzer der Anwendung, sind für das Tagesgeschäft verantwortlich
 a|
 - einfach zu bedienende Nutzeroberfläche
 - schnelle Verarbeitung der Aufträge
 
 |Administratoren
 |3
-|Benutzer die die Anwendung verwalten (Übersicht über alle Bestellungen/Finanzen etc.)
+|Benutzer, die die Anwendung verwalten (Übersicht über alle Bestellungen/Finanzen etc.)
 a|
 - Überblick über alle Abläufe/Vorgänge (Bestellungen, Lagerzustand, Finanzen, Mitarbeiter)
 - Verwaltung o. g. Prozesse
