--- a/src/main/asciidoc/srs/interessensgruppen.adoc
+++ b/src/main/asciidoc/srs/interessensgruppen.adoc
@@ -3,7 +3,7 @@
 In dieser Tabelle sind alle realen und juristischen Personen(-gruppen) die Einfluss auf die Anforderungen dieses Projektes haben vermerkt.
 Dabei wird jedem Akteur eine Priorität, von 1 (niedrigste) bis zu 5 (höchste), zugewiesen.
 Dies erleichtert, für den Fall das sich Anforderungen widersprechen, die Einscheidungsfindung.
-Die Hauptziele der einzelnen Akteure werden ebenfalls beschrieben
+Die Hauptziele der einzelnen Akteure werden ebenfalls beschrieben.
 
 [options="header"]
 [cols="2,^1,4,4"]
